Parte del buscador

--- a/.env.prod
+++ b/.env.prod
@@ -1,1 +1,1 @@
-URI_MONGO=<direction_mongodb_atlas>
+URI_MONGO=mongodb+srv://cdeleon2021671:<password>@bdprojectone.fmtxpjy.mongodb.net/?retryWrites=true&w=majority
