--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
+    "stopword": "^2.0.8",
+    "x2js": "^3.4.4",
     "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "thesaurus": "^0.0.1"
   }
 }
