--- a/.env.prod
+++ b/.env.prod
@@ -1,1 +1,1 @@
-URI_MONGO=mongodb+srv://cdeleon2021671:<password>@bdprojectone.fmtxpjy.mongodb.net/?retryWrites=true&w=majority
+URI_MONGO=mongodb+srv://cdeleon2021671:uQIm9Rprm7HJvbcY@dbfirstproject.3vxx6mx.mongodb.net/?retryWrites=true&w=majority
