--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "html-to-text": "^9.0.5",
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
