--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
+    "path": "^0.12.7",
     "stopword": "^2.0.8",
     "xml2js": "^0.6.2"
   },
