--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fuse.js": "^6.6.2",
     "helmet": "^7.0.0",
     "html-to-text": "^9.0.5",
     "mongoose": "^7.4.4",
