--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^7.0.0",
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.6",
