--- a/.env.prod
+++ b/.env.prod
@@ -1,1 +1,6 @@
 URI_MONGO=mongodb+srv://cdeleon2021671:uQIm9Rprm7HJvbcY@dbfirstproject.3vxx6mx.mongodb.net/?retryWrites=true&w=majority
+PORT=3200
+MAIL=cd6854002@gmail.com
+KEY_MAIL=jsor dsmw ccba pyzx
+URI_MONGO_LOCAL=mongodb://127.0.0.1:27017/DBFirstOne
+SECRET_KEY=jQm0w:KU*i3?~QR4l
